# zarrs_book

./: .gitmodules  404.html  CNAME  Cargo.toml  README.md  arrays.html  book.toml  crates.d2  crates.html  extensions.html  groups.html  index.html  installation.html  introduction.html  justfile  print.html  searcher-c2a407aa.js  searchindex-04ad3218.js  searchindex-ce85899b.js  searchindex-d44daf2e.js  searchindex.js  searchindex.json  stores.html  toc-237a0102.js  toc-4822247b.js  toc.html  toc.js  v2_to_v3.html  zarrs_ffi.html  zarrs_python.html  zarrs_tools.html
.github/workflows/: gh-pages.yml
arrays/: array_init.html  array_read.html  array_write.html
basic_usage/: array_init.html  array_read.html  group_init.html  store_init.html  v2_to_v3.html
extensions/: codec.html  data_type.html
src/: SUMMARY.md  arrays.md  crates.md  extensions.md  groups.md  installation.md  introduction.md  stores.md  v2_to_v3.md  zarrs_ffi.md  zarrs_python.md  zarrs_tools.md
src/arrays/: array_init.md  array_read.md  array_write.md
src/basic_usage/: array_init.md  array_read.md  group_init.md  store_init.md  v2_to_v3.md
src/extensions/: codec.md  data_type.md
theme/: custom-add52646.css  custom.css  pagetoc.css
zarr_benchmarks/: .gitignore  index.html  justfile  pyproject.toml
zarr_benchmarks/measurements/: benchmark_read_all.csv  benchmark_read_chunks.csv  benchmark_roundtrip.csv
zarr_benchmarks/src/zarr_benchmarks/: generate_benchmark_array.py  plot_benchmarks.py  run_benchmark_read_all.py  run_benchmark_read_chunks.py  run_benchmark_roundtrip.py
zarrs_tools/docs/: zarrs_binary2zarr.html  zarrs_filter.html  zarrs_info.html  zarrs_ncvar2zarr.html  zarrs_ome.html  zarrs_reencode.html  zarrs_validate.html
