[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[project]
name = "zarr-benchmarks"
version = "0.1.0"
description = "Performance benchmarks of Zarr V3 implementations"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Lachlan Deakin", email = "ljdgit@gmail.com"},
]
dependencies = [
    "click==8.2.1",
    "numpy==2.3.1",
    "dask==2025.7.0",
    "xarray==2025.7.1",
    # "xarray-tensorstore==0.1.5",
    "zarr==3.1.0",
    "zarrs==0.2.0",
    "pandas==2.3.1",
    "tabulate==0.9.0",
    "tensorstore==0.1.76",
    "matplotlib==3.10.3",
]

[project.scripts]
generate_benchmark_array = "zarr_benchmarks.generate_benchmark_array:main"
run_benchmark_read_all = "zarr_benchmarks.run_benchmark_read_all:main"
run_benchmark_read_chunks = "zarr_benchmarks.run_benchmark_read_chunks:main"
run_benchmark_roundtrip = "zarr_benchmarks.run_benchmark_roundtrip:main"
plot_benchmarks = "zarr_benchmarks.plot_benchmarks:main"

